--- a/src/app/dashboard/gender-ratio/gender-ratio.component.html
+++ b/src/app/dashboard/gender-ratio/gender-ratio.component.html
@@ -10,7 +10,7 @@
     class="flex relative bottom-4 justify-center items-center gap-4 mb-4 text-sm"
   >
     <div class="w-1/3 flex flex-col items-center">
-      <div class="h-1 w-16 rounded-full bg-blue-700 mb-1"></div>
+      <div class="h-1 w-16 rounded-full bg-[#4C78FF] mb-1"></div>
       <div class="text-gray-400">Male</div>
       <div>
         {{ maleCount }}
@@ -18,7 +18,7 @@
     </div>
     <div class="w-[2px] rounded-sm h-10 bg-gray-400"></div>
     <div class="w-1/3 flex flex-col items-center">
-      <div class="h-1 w-16 rounded-full bg-red-700 mb-1"></div>
+      <div class="h-1 w-16 rounded-full bg-[#FFBB38] mb-1"></div>
       <div class="text-gray-400">Female</div>
       <div>
         {{ femaleCount }}
