--- a/src/app/dashboard/stats-wrapper/stats-wrapper.component.html
+++ b/src/app/dashboard/stats-wrapper/stats-wrapper.component.html
@@ -1,9 +1,6 @@
 <div
-  class="relative shadow-lg bg-white shadow-gray-300 rounded-md overflow-hidden flex flex-col items-center pt-10"
-  [style]="{ width: chartWidth, height: chartHeight }"
+  class="relative bg-white lg:rounded-[20px] rounded-[15px] flex justify-center items-center"
+  [ngClass]="{'': isChart, 'py-5 px-4': !isChart}"
 >
-  <div class="absolute top-4 left-4 z-10 text-lg font-medium w-full">
-    {{ label }}
-  </div>
   <ng-content select="[chart]"></ng-content>
 </div>
