--- a/src/app/shared/components/filter/filter.component.html
+++ b/src/app/shared/components/filter/filter.component.html
@@ -2,13 +2,12 @@
   [formGroup]="filterForm"
   class="bg-white container sm:flex-row flex flex-col justify-between gap-3 pb-6 rounded-xl w-full"
 >
-  <div class="flex items-center sm:w-1/3">
-    <input
-      class="placeholder:text-sm border w-full rounded-xl py-3 md:py-[10px] px-2 text-sm md:text-base"
-      type="text"
+  <div class="flex items-center">
+    <sman-input
+      class="w-full"
+      className="relative top-[7px]"
       placeholder="Search by name"
       formControlName="name"
-
     />
   </div>
   @if (!nameOnly) {
