--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -23,7 +23,7 @@
     ></sman-header>
     <sman-loading-spinner></sman-loading-spinner>
     <div
-      class="bg-background min-h-[calc(100%-85px)] rounded-l-3xl p-6 relative z-0"
+      class="bg-background min-h-[calc(100%-85px)] md:rounded-l-3xl p-6 relative z-0"
     >
       <router-outlet></router-outlet>
     </div>
