--- a/src/app/students/student-edit/personal-info/student-personal-info.component.html
+++ b/src/app/students/student-edit/personal-info/student-personal-info.component.html
@@ -2,7 +2,7 @@
   title="Edit Student Personal Information"
   layout="edit"
   [formGroup]="editStudentPersonalInfoForm"
-  [isDirty]="editStudentPersonalInfoForm.dirty"
+  [isDirty]="formChanged"
   [dialogRef]="dialogRef"
   (submit)="edit()"
   [disableSubmit]="!formChanged"
