--- a/src/app/students/student-edit/profile-info/student-profile-info.component.html
+++ b/src/app/students/student-edit/profile-info/student-profile-info.component.html
@@ -3,7 +3,7 @@
   layout="edit"
   [formGroup]="editStudentProfileInfoForm"
   [dialogRef]="dialogRef"
-  [isDirty]="editStudentProfileInfoForm.dirty"
+  [isDirty]="formChanged"
   (submit)="edit()"
   [disableSubmit]="!formChanged"
 >
