--- a/src/app/user-page/change-password.component.html
+++ b/src/app/user-page/change-password.component.html
@@ -1,42 +1,44 @@
-<div class="flex flex-col justify-center items-center px-4">
-  <sman-heading title="Edit Password" classname="my-4 font-bold"></sman-heading>
+<sman-add-form-layout
+  title="Edit Admin Profile"
+  layout="edit"
+  [formGroup]="changePwdForm"
+  [dialogRef]="dialogRef"
+  [isDirty]="formIsChanged"
+  (submit)="changePassword()"
+  [disableSubmit]="!formIsChanged"
+>
   <form
+    formInputs
     class="w-full flex flex-col items-center gap-2"
     (ngSubmit)="changePassword()"
     [formGroup]="changePwdForm"
   >
-    <div class="w-full flex justify-between items-center">
-      <label for="newPwd">New Password:</label>
-      <input
-        class="rounded-md border py-3 px-2 text-sm"
-        type="text"
-        name="newPwd"
-        id="newPwd"
-        formControlName="newPwd"
-      />
-    </div>
-    <div class="w-full flex justify-between items-center">
-      <label for="confirmNewPwd">Confirm password:</label>
-      <input
-        class="rounded-md border py-3 px-2 text-sm"
-        type="text"
-        name="confirmNewPwd"
-        id="confirmNewPwd"
-        formControlName="confirmNewPwd"
-      />
-    </div>
+    <sman-input
+      formControlName="newPwd"
+      class="w-full"
+      label="New Password:"
+      name="newPwd"
+      placeholder="New Password"
+      [hasError]="formService.getCombinedErrors(newPwd)"
+      [errMsgs]="{
+            required: 'Please enter your new password.',
+            minlength: 'Password must be at least 8 character',
+            passwordInvalid:'Password must include at least a number',
+          }"
+    />
+    <sman-input
+      formControlName="confirmNewPwd"
+      class="w-full"
+      label="Confirm Password:"
+      name="confirmNewPwd"
+      placeholder="Confirm Password"
+      [hasError]="{fieldInvalid: formService.isFieldInvalid(confirmNewPwd),
+        passwordMismatch: !!changePwdForm.errors?.['passwordMismatch']
+      }"
+      [errMsgs]="{
+        required: 'Please confirm your new password.',
+        passwordMismatch: 'Your password does not match.'
+      }"
+    />
   </form>
-  <div class="flex justify-between items-center gap-5 w-full mt-6 mb-8">
-    <sman-button
-      text="Cancel"
-      btnType="cancel"
-      (buttonClick)="cancelChangePassword()"
-    ></sman-button>
-    <sman-button
-      text="Confirm"
-      btnType="primary"
-      (buttonClick)="changePassword()"
-      [isDisabled]="changePwdForm.invalid || isLoading"
-    ></sman-button>
-  </div>
-</div>
+</sman-add-form-layout>
