--- a/src/app/parents/parent-profile/parent-profile.component.html
+++ b/src/app/parents/parent-profile/parent-profile.component.html
@@ -1,4 +1,4 @@
-<sman-profile-layout (delete)="deleteParent()" (back)="goBack()">
+<sman-profile-layout (delete)="onDelete()" (back)="goBack()">
   <sman-info-wrapper [profilePic]="true" (edit)="showEditProfileInfo()">
     <div class="flex items-center gap-2 sm:gap-6 lg:gap-10">
       @if(parent !== null) {
