--- a/src/app/school-classes/classes-detail/classes-detail.component.html
+++ b/src/app/school-classes/classes-detail/classes-detail.component.html
@@ -1,46 +1,43 @@
-@if (classes) {
-  @if (isShow) {
-    <sman-add-class
-      [isEdit]="true"
-      [classes]="classes"
-      (cancelForm)="hideEditForm()"
-    ></sman-add-class>
-  }
-  <sman-profile-layout
-    (edit)="showEditForm()"
-    (delete)="deleteClass()"
-    (back)="goBack()"
-  >
-    <ng-container profileInfo>
-      <div class="text-lg text-blue-800 font-semibold">{{ classes.name }}</div>
-      <sman-profile-info label="Class ID:">
-        <div info>{{ classes.id }}</div>
-      </sman-profile-info>
+<sman-profile-layout (delete)="onDelete()" (back)="goBack()">
+  <sman-info-wrapper [profilePic]="true" [editable]="false">
+    <div class="flex items-center gap-2 sm:gap-6 lg:gap-10">
+      <div>
+        <div class="md:text-lg text-blue-800 font-semibold">
+          {{ classes?.name }}
+        </div>
+        <div class="text-inputTitle text-sm font-medium">Class</div>
+        <div class="text-inputTitle text-xs">
+          {{ "ID: " + classes?.id }}
+        </div>
+      </div>
+    </div>
+  </sman-info-wrapper>
+
+  <sman-info-wrapper (edit)="showEditClassDetail()">
+    <div title>Class Information</div>
+    <ng-container content>
       <sman-profile-info label="Students:">
         <div info class="flex gap-2">
-          @for (student of classes.students; track student.id) {
-            @if ($last) {
-              <span class="cursor-pointer select-none hover:underline"
-                ><a [routerLink]="['../../students', student.id]">{{
-                  student.firstName + " " + student.lastName
-                }}</a></span
-              >
-            } @else {
-              <div class="inline">
-                <span class="cursor-pointer select-none hover:underline"
-                  ><a [routerLink]="['../../students', student.id]">{{
-                    student.firstName + " " + student.lastName
-                  }}</a></span
-                ><span>, </span>
-              </div>
-            }
-          } @empty {
-            <div class="text-gray-400 select-none">No student enrolled.</div>
+          @for (student of classes?.students; track student?.id) { @if(student != null)
+          {@if ($last) {
+          <span class="cursor-pointer select-none hover:underline text-nowrap"
+            ><a [routerLink]="['../../students', student.id]">{{
+              student.firstName + " " + student.lastName
+            }}</a></span
+          >
+          } @else {
+          <div class="inline">
+            <span class="cursor-pointer select-none hover:underline text-nowrap"
+              ><a [routerLink]="['../../students', student.id]">{{
+                student.firstName + " " + student.lastName
+              }}</a></span
+            ><span>, </span>
+          </div>
+          } }} @empty {
+          <div class="text-gray-400 select-none">No student enrolled.</div>
           }
         </div>
       </sman-profile-info>
     </ng-container>
-  </sman-profile-layout>
-} @else {
-  <div class="text-center mt-6 text-gray-400">This class does not exist!</div>
-}
+  </sman-info-wrapper>
+</sman-profile-layout>
