--- a/src/app/subjects/subject-detail/subject-detail.component.html
+++ b/src/app/subjects/subject-detail/subject-detail.component.html
@@ -1,57 +1,57 @@
-@if (subject) {
-  @if (isShow) {
-    <sman-add-subject
-      [isEdit]="true"
-      [subject]="subject"
-      (cancelForm)="hideEditForm()"
-    ></sman-add-subject>
-  }
-  <sman-profile-layout
-    (edit)="showEditForm()"
-    (delete)="deleteSubject()"
-    (back)="goBack()"
-  >
-    <ng-container profileInfo>
-      <div class="text-lg text-blue-800 font-semibold">{{ subject.name }}</div>
-      <sman-profile-info label="ID:">
-        <div info>{{ subject.id }}</div>
-      </sman-profile-info>
-      <sman-profile-info label="Teacher:">
-        <div
-          info
-          class="cursor-pointer select-none hover:underline"
-          [routerLink]="['../../teachers', subject.teacherId]"
-        >
-          {{ subject.teacher!.firstName + " " + subject.teacher!.lastName }}
+<sman-profile-layout (delete)="onDelete()" (back)="goBack()">
+  <ng-container profileInfo>
+    <sman-info-wrapper [profilePic]="true" [editable]="false">
+      <div class="flex items-center gap-2 sm:gap-6 lg:gap-10">
+        <div>
+          <div class="md:text-lg text-blue-800 font-semibold">
+            {{ subject?.name }}
+          </div>
+          <div class="text-inputTitle text-sm font-medium">School Subject</div>
+          <div class="text-inputTitle text-xs">
+            {{ "ID: " + subject?.id }}
+          </div>
         </div>
-      </sman-profile-info>
-      <sman-profile-info label="Class:">
-        <div
-          info
-          class="cursor-pointer select-none hover:underline"
-          [routerLink]="['../../classes', subject.classId]"
-        >
-          {{ subject.class!.name }}
-        </div>
-      </sman-profile-info>
-      <sman-profile-info label="Days of week:">
-        <div info class="flex gap-2">
-          @for (day of subject.daysOfWeek; track $index) {
-            @if ($last) {
-              <span>{{ day | titlecase }}</span>
+      </div>
+    </sman-info-wrapper>
+
+    <sman-info-wrapper (edit)="showSubjectInfo()">
+      <div title>Subject Details</div>
+      <ng-container content>
+        <sman-profile-info label="Teacher:">
+          <div
+            info
+            class="cursor-pointer select-none hover:underline"
+            [routerLink]="['../../teachers', subject?.teacherId]"
+          >
+            {{
+              (subject?.teacher)!.firstName + " " + (subject?.teacher)!.lastName
+            }}
+          </div>
+        </sman-profile-info>
+        <sman-profile-info label="Class:">
+          <div
+            info
+            class="cursor-pointer select-none hover:underline"
+            [routerLink]="['../../classes', subject?.classId]"
+          >
+            {{ (subject?.class)!.name }}
+          </div>
+        </sman-profile-info>
+        <sman-profile-info label="Days of week:">
+          <div info class="flex gap-2">
+            @for (day of subject?.daysOfWeek; track $index) { @if ($last) {
+            <span>{{ day | titlecase }}</span>
             } @else {
-              <div class="inline">
-                <span>{{ day | titlecase }}</span
-                ><span>, </span>
-              </div>
-            }
-          } @empty {
+            <div class="inline">
+              <span>{{ day | titlecase }}</span
+              ><span>, </span>
+            </div>
+            } } @empty {
             <div class="text-gray-400 select-none">No schedule infomation.</div>
-          }
-        </div>
-      </sman-profile-info>
-    </ng-container>
-  </sman-profile-layout>
-} @else {
-  <div class="text-center mt-6 text-gray-400">This subject does not exist!</div>
-}
+            }
+          </div>
+        </sman-profile-info>
+      </ng-container>
+    </sman-info-wrapper>
+  </ng-container>
+</sman-profile-layout>
