--- a/src/app/teachers/teacher-profile/teacher-profile.component.html
+++ b/src/app/teachers/teacher-profile/teacher-profile.component.html
@@ -1,41 +1,54 @@
-@if (teacher) {
-  @if (isShow) {
-    <sman-add-teacher
-      [isEdit]="true"
-      [teacher]="teacher"
-      (cancelForm)="hideEditForm()"
-    ></sman-add-teacher>
-  }
-  <sman-profile-layout
-    (edit)="showEditForm()"
-    (delete)="deleteTeacher()"
-    (back)="goBack()"
-  >
-    <sman-profile-photo profilePhoto [photoSrc]="teacher.profileUrl" />
-    <ng-container profileInfo>
-      <div class="text-lg text-blue-800 font-semibold">
-        {{ teacher.firstName + " " + teacher.lastName }}
+<sman-profile-layout (delete)="onDelete()" (back)="goBack()">
+  <sman-info-wrapper [profilePic]="true" (edit)="showEditProfileInfo()">
+    <div class="flex items-center gap-2 sm:gap-6 lg:gap-10">
+      @if(teacher !== null) {
+      <sman-profile-photo
+        profilePhoto
+        [size]="screenXs ? 55 : 85"
+        [photoSrc]="teacher.profileUrl || ''"
+      />
+      <div>
+        <div class="md:text-lg text-blue-800 font-semibold">
+          {{ teacher.firstName + " " + teacher.lastName }}
+        </div>
+        <div class="text-inputTitle text-sm font-medium">Teacher</div>
+        <div class="text-inputTitle text-xs">
+          {{ "ID: " + teacher.id }}
+        </div>
       </div>
-      <sman-profile-info label="Teacher ID:">
-        <div info>{{ teacher.id }}</div>
-      </sman-profile-info>
-      <sman-profile-info label="Phone:">
-        <div info>{{ teacher.phone }}</div>
-      </sman-profile-info>
+      } @else {
+      <div class="text-inputTitle text-sm font-medium">
+        The teacher with this ID:
+        <span class="font-bold underline">{{ teacherId }}</span> does not exist
+      </div>
+      }
+    </div>
+  </sman-info-wrapper>
+
+  <sman-info-wrapper (edit)="showEditPersonalInfo()">
+    <div title>Personal Information</div>
+    <ng-container content>
       <sman-profile-info label="Gender:">
-        <div info>{{ teacher.gender | titlecase }}</div>
-      </sman-profile-info>
-      <sman-profile-info label="Email:">
-        <div info>{{ teacher.email }}</div>
+        <div info>{{ teacher?.gender | titlecase }}</div>
       </sman-profile-info>
       <sman-profile-info label="Address:">
-        <div info>{{ teacher.address }}</div>
+        <div info>{{ teacher?.address }}</div>
       </sman-profile-info>
-      <sman-profile-info label="Admission Date:">
-        <div info>{{ teacher.admissionDate | date: "longDate" }}</div>
+      <sman-profile-info label="Phone:">
+        <div info>{{ teacher?.phone }}</div>
+      </sman-profile-info>
+      <sman-profile-info label="Email:">
+        <div info>{{ teacher?.email }}</div>
       </sman-profile-info>
     </ng-container>
-  </sman-profile-layout>
-} @else {
-  <div class="text-center mt-6 text-gray-400">This teacher does not exist!</div>
-}
+  </sman-info-wrapper>
+
+  <sman-info-wrapper (edit)="showEditEnrollmentInfo()">
+    <div title>Enrollment Details</div>
+    <ng-container content>
+      <sman-profile-info label="Admission Date:">
+        <div info>{{ teacher?.admissionDate | date : "longDate" }}</div>
+      </sman-profile-info>
+    </ng-container>
+  </sman-info-wrapper>
+</sman-profile-layout>
