--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -8,7 +8,7 @@
     </div>
     @if (user) {
     <div class="flex flex-col justify-center items-center">
-      <form class="w-full md:w-[700px] flex flex-col items-center gap-2">
+      <form class="w-full md:w-[700px] flex flex-col items-center gap-2 mb-4">
         <div class="w-2/3 flex justify-between items-center">
           <label for="firstName">First Name:</label>
           <input
@@ -43,6 +43,7 @@
           />
         </div>
       </form>
+      <hr class="w-full md:w-1/2"/>
       <div class="flex justify-center items-center gap-5 w-96 mt-10 mb-12">
         <sman-button
           text="Edit Profile"
