--- a/src/app/shared/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/shared/components/loading-spinner/loading-spinner.component.html
@@ -1,4 +1,4 @@
-@if (isLoading$ | async) {
+@if ((isLoading$ | async) || isLoading) {
   <div
     class="absolute top-0 left-0 bottom-0 right-0 flex items-center justify-center bg-white z-20"
   >
