--- a/src/app/parents/parents-page.component.html
+++ b/src/app/parents/parents-page.component.html
@@ -1,4 +1,9 @@
-<sman-page-layout title="Parents" (createNew)="openDialog()">
+<sman-page-layout
+  class="relative"
+  title="Parents"
+  (createNew)="openDialog()"
+  [isLoading]="isLoading"
+>
   <sman-filter
     filter
     (filter)="filterParents($event)"
@@ -12,12 +17,12 @@
     (sort)="filterParents($event)"
   ></sman-item-table>
   @if (parentsCount) {
-  <sman-pagination
-    pagination
-    [pageSize]="itemPerPage"
-    [totalCount]="parentsCount"
-    [currentPage]="currentPage"
-    (pageChange)="handlePageChange($event)"
-  />
+    <sman-pagination
+      pagination
+      [pageSize]="itemPerPage"
+      [totalCount]="parentsCount"
+      [currentPage]="currentPage"
+      (pageChange)="handlePageChange($event)"
+    />
   }
 </sman-page-layout>
