--- a/src/app/school-classes/classes-page.component.html
+++ b/src/app/school-classes/classes-page.component.html
@@ -1,4 +1,9 @@
-<sman-page-layout title="Classes" (createNew)="openDialog()">
+<sman-page-layout
+  class="relative"
+  title="Classes"
+  (createNew)="openDialog()"
+  [isLoading]="isLoading"
+>
   <sman-filter
     filter
     [nameOnly]="true"
@@ -12,6 +17,7 @@
     [items]="classes"
     (sort)="filterClasses($event)"
   ></sman-item-table>
+  @if (classesCount) {
   <sman-pagination
     pagination
     [pageSize]="itemPerPage"
@@ -19,4 +25,5 @@
     [currentPage]="currentPage"
     (pageChange)="handlePageChange($event)"
   />
+  }
 </sman-page-layout>
